MOBI-282 updated list.css for android to avoid horizontal scroll on android 4.x.
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@30401 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/android/default-list.css
+++ b/resources/themes/android/default-list.css
@@ -86,7 +86,6 @@
     color: #fff;
     display: block;
     /*margin: -8px 0 -8px -10px;*/
-    width: 100%;
     padding: 15px 25px;
 }
 
